new file:   Templates/_notes/dwsync.xml 	new file:   Templates/predloha.dwt 	new file:   _notes/dwsync.xml 	modified:   css.css 	new file:   e_faq.html 	new file:   e_navod.html 	new file:   e_program.html 	new file:   e_stiahnut.html 	modified:   eyeblink.html 	modified:   image/Thumbs.db 	new file:   image/_notes/dwsync.xml 	new file:   image/button.png 	new file:   image/button_pressed.psd 	new file:   image/button_pressed_better.psd 	new file:   image/face.png 	new file:   image/face50.png 	new file:   image/google50.png 	new file:   image/header.jpg 	new file:   image/header2.jpg 	new file:   image/header_no_logo.png 	new file:   image/header_no_logo.psd 	new file:   image/logo_eyeblink.png 	new file:   image/logo_eyeblink.psd 	new file:   image/logo_eyeblink_masked2.psd 	new file:   image/logo_eyeblink_masked2_green.psd 	new file:   image/reklama2.png 	new file:   image/retina_dust/Thumbs.db 	new file:   image/retina_dust/_notes/dwsync.xml 	new file:   image/retina_dust/retina_dust.png 	new file:   image/twitter50.png 	modified:   index.html 	new file:   k_tvorcovia.html 	new file:   k_udaje.html 	modified:   kontakt.html 	new file:   s_liecenie.html 	new file:   s_priciny_vzniku.html 	new file:   s_syndrom.html 	new file:   small_circle.png 	modified:   suche_oci.html

--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@
 
 body {
 	color: #000;
-	background:#D1D1D1;
+	background-image:url(image/retina_dust/retina_dust.png);
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Open Sans Condensed', sans-serif;
@@ -25,25 +25,15 @@ p {
 	text-align: justify;
 	font-size: 20px;
 }
-roll_menu {
-	padding: 20px 50px 150px;
-	font-size: 16px;
-	text-align: center;
-	background: #E3CAA1;
-	float: left;
-	left: 480px;
-	top: 55px;
-	text-decoration: none;
-}
 .ul_menu {
 	text-align: left;
+	margin:0;
 	display: inline-block;
-	margin: 0;
 	padding: 15px 4px 17px 0;
 	list-style: none;
 	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 	-moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.0);
 	text-decoration: none;
 	position: relative;
 }
